fixed text spacing for largest desktop size

--- a/src/styles/programs.css
+++ b/src/styles/programs.css
@@ -170,7 +170,7 @@
     
         color: #ffe500;
     
-        padding-top: 1em;
+        padding-top: .4em;
         align-self: center;
     }
     
@@ -181,12 +181,12 @@
         text-align: center;
     
         max-width: 1000px;
-        padding-top: 7.5em;
+        padding-top: 7em;
         align-self: center;
     }
     
     .buttonRow {
-        padding-top: 8em;
+        padding-top: 7em;
         width: 100%;
         display: flex;
         justify-content: center;
